fix: table overflow

--- a/packages/content/styles/table.module.css
+++ b/packages/content/styles/table.module.css
@@ -1,12 +1,15 @@
 .table {
   & table {
+    display: block;
+    max-width: fit-content;
+    overflow-x: auto;
+    white-space: nowrap;
     border-collapse: collapse;
     border-spacing: 0;
     border: 1px solid #ddd;
     border-right: 0;
     background-color: transparent;
     width: 100%;
-    max-width: 100%;
     margin-bottom: 20px;
 
     & th {
